# splitbills_server

./: .envrc  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_lock.txt  roadmap.org  shell.nix  splitbills_server.py
.github/workflows/: ci.yml  deploy.yml  tests.yml  tests_dev.yml
app/: __init__.py  auth.py  authentication.py  common.py  config.py  decorators.py  email.py  mail.py  models.py  models_queries.py
app/api/: __init__.py  resources.py  routes.py
app/api/resources/: auth.py  bill.py  bills.py  common.py  friends.py  group.py  group_add_user.py  group_bills.py  group_member.py  group_members.py  groups.py  token.py  tokens.py  tokens_refresh.py  user.py  users.py  users_confirm.py  welcome.py
app/api/schemas/: bill.py  bill_member.py  group.py  group_add_user.py  user.py
app/content/: __init__.py  routes.py
app/content/templates/: index.html
app/github/: __init__.py  routes.py
app/models/: bill.py  bill_member.py  friend.py  group.py  group_member.py  role.py  token.py  user.py
app/templates/mail/: account_confirmation.html  account_confirmation.txt  account_created.html  (+3 more)
app/util/: converter.py  json_data_encoder.py
docker/splitbills_server/: .env.custom  .env.dev  docker-compose.yml
requirements/: common.txt  dev.txt
scripts/: entrypoint.sh  gunicorn_starter.sh  lint_code.sh  run_debug_server  run_tests
test_client/: .config.json  test_client.py
tests/: common.py
tests/unit/: conftest.py  test_auth.py  test_authentication.py  test_decorators.py  test_example.py  test_mail.py
(+27 files in other folders)
